--- a/app/src/main/res/layout/fragment_dropdown.xml
+++ b/app/src/main/res/layout/fragment_dropdown.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.new_survey.QuestionFragment">
-
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    tools:context=".presentation.new_survey.QuestionFragment"
+    android:orientation="vertical">
+    
+    <include layout="@layout/question"/>
+    
+    <androidx.appcompat.widget.AppCompatSpinner
+        android:id="@+id/spinner"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
-
-</FrameLayout>
+        android:layout_height="wrap_content" />
+    
+</LinearLayout>
