--- a/app/src/main/res/layout/fragment_previous_survey.xml
+++ b/app/src/main/res/layout/fragment_previous_survey.xml
@@ -10,14 +10,16 @@
 
     <TextView
         android:id="@+id/textView"
-        style="@style/TitleText"
+        style="@style/CaptionTextStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Surveys"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_margin="16dp"/>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvPreviousSurvey"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -35,7 +37,8 @@
         android:src="@drawable/ic_baseline_add_24"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:elevation="10dp"/>
+        app:elevation="10dp"
+        android:layout_margin="16dp"/>
 
     <include layout="@layout/loading"
         tools:visibility="gone"/>
