--- a/app/src/main/res/layout/item_previous_question_item.xml
+++ b/app/src/main/res/layout/item_previous_question_item.xml
@@ -2,20 +2,24 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_marginBottom="12dp">
 
     <TextView
         android:id="@+id/question"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:text="How do you do?"/>
+        tools:text="How do you do?"
+        android:textSize="16sp"/>
 
     <TextView
+        android:layout_marginTop="8dp"
         android:layout_below="@+id/question"
         android:id="@+id/answer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         tools:text="Very good"
+        android:textStyle="bold"
         />
 
 </RelativeLayout>
