--- a/app/src/main/res/layout/item_previous_survey.xml
+++ b/app/src/main/res/layout/item_previous_survey.xml
@@ -1,15 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginStart="16dp"
+    android:layout_marginEnd="16dp"
+    android:layout_marginBottom="16dp"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:padding="16dp">
 
         <ImageView
+            android:id="@+id/expand"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
@@ -18,10 +24,12 @@
             android:layout_alignBottom="@id/date"/>
 
         <TextView
+            style="@style/InfoTextStyle"
             android:id="@+id/date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:text="a minute ago"
+            android:layout_marginTop="8dp"
             android:layout_below="@id/textTotalQuestions"/>
 
         <TextView
@@ -35,9 +43,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toEndOf="@id/textTotalQuestions"
-            tools:text="10"/>
+            tools:text="10"
+            android:layout_marginStart="8dp"
+            android:textStyle="bold"/>
 
         <androidx.recyclerview.widget.RecyclerView
+            android:nestedScrollingEnabled="false"
+            android:id="@+id/rvItem"
+            android:layout_marginTop="16dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/date"
