--- a/app/src/main/res/layout/question.xml
+++ b/app/src/main/res/layout/question.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <TextView
+        style="@style/HeadlineTextStyle"
         android:id="@+id/questionStatement"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
