--- a/app/src/main/res/layout/fragment_number.xml
+++ b/app/src/main/res/layout/fragment_number.xml
@@ -4,7 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    style="@style/QuestionFragmnetStyle">
 
     <include
         android:id="@+id/include"
@@ -19,7 +20,8 @@
         app:layout_constraintEnd_toEndOf="@+id/include"
         app:layout_constraintStart_toStartOf="@+id/include"
         app:layout_constraintTop_toBottomOf="@+id/include"
-        android:inputType="number"/>
+        android:inputType="number"
+        android:layout_marginTop="16dp"/>
 
 
 </LinearLayout>
