--- a/app/src/main/res/layout/fragment_previous_survey.xml
+++ b/app/src/main/res/layout/fragment_previous_survey.xml
@@ -19,6 +19,7 @@
         android:layout_margin="16dp"/>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:layout_marginTop="16dp"
         android:id="@+id/rvPreviousSurvey"
         android:layout_width="0dp"
         android:layout_height="0dp"
